5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1831_3176.log
== TEST (2019-06-13 16:08:27) 
-- CODE:
from numpy import*
string = array(eval(input("insira uma string: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:12:46) 
-- CODE:
from numpy import*
string = array(eval(input("insira uma string: ")))
v = 0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:46) 
-- CODE:
from numpy import*
string = array(eval(input("insira uma string: ")))
v = 0

for string [a, b, c, d, e]
-- ERROR:
File "XXXX", line 5
    for string [a, b, c, d, e]
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:03) 
-- CODE:
from numpy import*
string = array(eval(input("insira uma string: ")))
v = 0

for string [a, b, c, d, e]:
	print(n)
-- ERROR:
File "XXXX", line 5
    for string [a, b, c, d, e]:
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:13) 
-- CODE:
from numpy import*
string = array(eval(input("insira uma string: ")))
v = 0

for string [a,b,c,d,e]:
	print(n)
-- ERROR:
File "XXXX", line 5
    for string [a,b,c,d,e]:
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:09) 
-- CODE:
from numpy import*
string = array(eval(input("insira uma string: ")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:06) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a stting:")))

v = size(alf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:46) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:56) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:04) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(v/2):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:26) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(v/2):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:35) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:33) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:41) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:57) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:08) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[] = alf[] - 1
-- ERROR:
File "XXXX", line 8
    alf[] = alf[] - 1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:23) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:29) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:05) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:24) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:37) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:41) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:48) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:29) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string: ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:13) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:22) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	v = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:04) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:40) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(v
-- ERROR:
File "XXXX", line 11
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:46) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:56) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:04) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:11) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(alf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:21) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(alf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:53) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:50) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	1
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:02) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	1 > 0
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:08) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	1 > 0
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:49:36) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[1] = alf[1] - 2
	alf[-1] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:08) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[i] = alf[i] - 2
	alf[-1] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:21) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:51:38) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:35) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:43) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:52:54) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:03) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:20) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
else:
	print(numb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:26) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
else:
	print(numb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:35) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:40) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:17) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:55) 
-- CODE:
from numpy import*
alf = array(eval(input("qual a string? ")))

v = size(alf)
numb = array([])
for i in range(alf/2):
	min = alf[1]
	i = 2
	alf[i] = alf[i] - 2
	alf[-i] = min
	i = [i]
	print(v)
else:
	print(numb) #plsss i wanna die 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
